--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "engines": {
+    "node": "6.11.1"
+  },
   "dependencies": {
     "angular": "^1.6.2",
     "angular-ui-router": "1.0.0-beta.3"
@@ -55,6 +58,9 @@
     "babel-loader": "^6.3.2"
   },
   "scripts": {
+    "start": "gulp serve",
+    "heroku-prebuild": "npm install",
+    "heroku-postbuild": "",
     "build": "gulp",
     "serve": "gulp serve",
     "serve:dist": "gulp serve:dist",
