--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "engines": {
-    "node": "6.11.1"
+    "node": "6.11.1",
+    "npm": "5.5.1"
   },
   "dependencies": {
     "angular": "^1.6.2",
